Rename app to Rozadaar App while keeping Sunwarian as default location

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <title>Sunwarian Ramadan Timing</title>
+  <title>Rozadaar App - Ramadan Timing</title>
   <meta name="description" content="Ramadan Timings for Sunwarian, Azad Kashmir" />
   <meta name="theme-color" content="#047857" /> <!-- Matches emerald-700 -->
   <link rel="manifest" href="./manifest.json" />
