Rebrand to Rozadaar App: Update name, icons, and constants

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <title>Rozadaar App - Ramadan Timing</title>
-  <meta name="description" content="Ramadan Timings for Sunwarian, Azad Kashmir" />
+  <meta name="description" content="Ramadan Timings for Rozadaar App" />
   <meta name="theme-color" content="#047857" /> <!-- Matches emerald-700 -->
   <link rel="manifest" href="./manifest.json" />
 
   <!-- Custom SVG Favicon (Emerald Moon) -->
+  <!-- Custom SVG Favicon (Rozadaar Logo) -->
   <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><path fill=%22%23047857%22 d=%22M50 5C25.1 5 5 25.1 5 50s20.1 45 45 45 45-20.1 45-45S74.9 5 50 5zm0 80c-19.3 0-35-15.7-35-35s15.7-35 35-35c3.2 0 6.3.4 9.2 1.2-16.6 6.5-28.3 22.8-28.3 41.9 0 16.2 8.4 30.5 21.2 38.6-6.4 2.2-13.3 3.3-22.1 3.3z%22/></svg>">
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><circle cx=%2250%22 cy=%2250%22 r=%2245%22 fill=%22%23047857%22/><path fill=%22%23fbbf24%22 d=%22M50 15C35 15 22 25 18 38c3 0 6-2 9-2 15 0 25 10 25 25 0 8-3 15-8 20 6 3 13 4 20 4 19 0 35-16 35-35S80 15 50 15z%22/><text x=%2250%22 y=%2270%22 font-family=%22Arial, sans-serif%22 font-size=%2240%22 fill=%22white%22 text-anchor=%22middle%22 font-weight=%22bold%22>R</text></svg>">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
